<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>qdgx-dmp-spark</artifactId>
	<packaging>jar</packaging>
	<name>qdgx-dmp-spark</name>
	<groupId>com.qdgx.dmp</groupId>
	<version>2.0.0</version>

<!--	<parent>-->
<!--		<groupId>com.qdgx.dmp</groupId>-->
<!--		<artifactId>dmp-base-parent</artifactId>-->
<!--		<version>2.0.0</version>-->
<!--	</parent>-->

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>1.8</java.version>
		<hbase-spring-boot>1.0.0.RELEASE</hbase-spring-boot>
		<spring-data-hadoop.version>2.4.0.RELEASE</spring-data-hadoop.version>
		<zookeeper.version>3.4.8</zookeeper.version>
		<curator.version>2.11.1</curator.version>
        <spark.version>2.1.0.cloudera2</spark.version>
		<hadoop.version>2.7.4</hadoop.version>
		<hive.version>2.3.4</hive.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.encoding>UTF-8</maven.compiler.encoding>
		<java.version>1.8</java.version>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<java.version>1.8</java.version>
		<scala.version>2.11.8</scala.version>
		<scala.library>2.11</scala.library>
	</properties>

	<dependencies>
<!--		&lt;!&ndash; MYSQL &ndash;&gt;-->
<!--		<dependency>-->
<!--			<groupId>mysql</groupId>-->
<!--			<artifactId>mysql-connector-java</artifactId>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>com.qdgx.dmp</groupId>-->
<!--			<artifactId>qdgx-dmp-commom</artifactId>-->
<!--			<version>${damp.version}</version>-->
<!--		</dependency>-->
		<!-- 服务监控 -->
<!--		<dependency>-->
<!--			<groupId>io.micrometer</groupId>-->
<!--			<artifactId>micrometer-registry-prometheus</artifactId>-->
<!--		</dependency>-->
		<!-- hystrix -->
<!--		<dependency>-->
<!--			<groupId>org.springframework.cloud</groupId>-->
<!--			<artifactId>spring-cloud-starter-netflix-hystrix</artifactId>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>org.springframework.cloud</groupId>-->
<!--			<artifactId>spring-cloud-starter-netflix-ribbon</artifactId>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>org.springframework.cloud</groupId>-->
<!--			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>-->
<!--			<exclusions>-->
<!--				<exclusion>-->
<!--					<groupId>>com.google.guava</groupId>-->
<!--					<artifactId>guava</artifactId>-->
<!--				</exclusion>-->
<!--			</exclusions>-->
<!--		</dependency>-->

<!--		<dependency>-->
<!--			<groupId>org.springframework.boot</groupId>-->
<!--			<artifactId>spring-boot-starter-web</artifactId>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>org.springframework.cloud</groupId>-->
<!--			<artifactId>spring-cloud-starter-sleuth</artifactId>-->
<!--		</dependency>-->

<!--		<dependency>-->
<!--			<groupId>org.springframework.cloud</groupId>-->
<!--			<artifactId>spring-cloud-starter-zipkin</artifactId>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>org.springframework.cloud</groupId>-->
<!--			<artifactId>spring-cloud-starter-openfeign</artifactId>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>org.springframework.boot</groupId>-->
<!--			<artifactId>spring-boot-starter-actuator</artifactId>-->
<!--		</dependency>-->

<!--		<dependency>-->
<!--			<groupId>org.springframework.cloud</groupId>-->
<!--			<artifactId>spring-cloud-starter-config</artifactId>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>org.springframework.boot</groupId>-->
<!--			<artifactId>spring-boot-starter-data-redis</artifactId>-->
<!--		</dependency>-->

        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-core_2.11</artifactId>
            <version>${spark.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-launcher_2.11</artifactId>
            <version>${spark.version}</version>
        </dependency>
<!--        <dependency>-->
<!--            <groupId>org.apache.spark</groupId>-->
<!--            <artifactId>spark-catalyst_2.11</artifactId>-->
<!--            <version>${spark.version}</version>-->
<!--        </dependency>-->
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-sql_2.11</artifactId>
            <version>${spark.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-hive_2.11</artifactId>
            <version>${spark.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-yarn_2.11</artifactId>
            <version>${spark.version}</version>
        </dependency>
<!--        <dependency>-->
<!--            <groupId>org.apache.spark</groupId>-->
<!--            <artifactId>spark-sql-kafka-0-10_2.11</artifactId>-->
<!--            <version>${spark.version}</version>-->
<!--        </dependency>-->
		<dependency>
			<groupId>org.apache.spark</groupId>
			<artifactId>spark-mllib_2.11</artifactId>
			<version>${spark.version}</version>
		</dependency>
<!--		<dependency>-->
<!--			<groupId>org.apache.spark</groupId>-->
<!--			<artifactId>spark-streaming-kafka-0-10_2.11</artifactId>-->
<!--			<version>2.1.0</version>-->
<!--		</dependency>-->

<!--		<dependency>-->
<!--			<groupId>com.alibaba</groupId>-->
<!--			<artifactId>fastjson</artifactId>-->
<!--			<version>1.2.24</version>-->
<!--		</dependency>-->

<!--       <dependency>-->
<!--			<groupId>com.qdgx.dmp</groupId>-->
<!--			<artifactId>qdgx-dmp-commom</artifactId>-->
<!--			<version>${damp.version}</version>-->
<!--			<exclusions>-->
<!--				<exclusion>-->
<!--					<groupId>org.springframework.boot</groupId>-->
<!--					<artifactId>spring-boot-starter-data-jpa</artifactId>-->
<!--				</exclusion>-->
<!--			</exclusions>-->
<!--		</dependency>-->

		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.12</version>
		</dependency>
		
		<dependency>
			<groupId>org.apache.hive</groupId>
			<artifactId>hive-jdbc</artifactId>
			<version>${hive.version}</version>
			<exclusions>
				<exclusion>
					<groupId>org.eclipse.jetty.aggregate</groupId>
					<artifactId>jetty-all</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.apache.hadoop</groupId>
			<artifactId>hadoop-client</artifactId>
			<version>${hadoop.version}</version>
		</dependency>

<!--		<dependency>-->
<!--			<groupId>org.springframework.data</groupId>-->
<!--			<artifactId>spring-data-commons</artifactId>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>org.mybatis.spring.boot</groupId>-->
<!--			<artifactId>mybatis-spring-boot-starter</artifactId>-->
<!--			<version>1.2.0</version>-->
<!--			<exclusions>-->
<!--				<exclusion>-->
<!--					<groupId>ch.qos.logback</groupId>-->
<!--					<artifactId>logback-classic</artifactId>-->
<!--				</exclusion>-->
<!--			</exclusions>-->
<!--		</dependency>-->
	</dependencies>


	<dependencyManagement>
<!--		<dependencies>-->
<!--			<dependency>-->
<!--				<groupId>org.springframework.cloud</groupId>-->
<!--				<artifactId>spring-cloud-dependencies</artifactId>-->
<!--				<version>${spring.cloud.version}</version>-->
<!--				<type>pom</type>-->
<!--				<scope>import</scope>-->
<!--			</dependency>-->
<!--		</dependencies>-->
	</dependencyManagement>
	<repositories>
<!--		<repository>-->
<!--			<id>qdgx-damp</id>-->
<!--			<name>qdgx-damp</name>-->
<!--			<url>http://192.168.100.246:8081/repository/maven-releases/</url>-->
<!--		</repository>-->
		
		<repository>
			<id>cloudera</id>
			<url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
			<name>Cloudera Repositories</name>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
<!--		<repository>-->
<!--			<id>maven2</id>-->
<!--			<url>http://repository.jspresso.org/maven2/</url>-->
<!--			<name>Maven2 Repositories</name>-->
<!--			<snapshots>-->
<!--				<enabled>false</enabled>-->
<!--			</snapshots>-->
<!--		</repository>-->
	</repositories>
<!--	<build>-->
<!--		<plugins>-->
<!--&lt;!&ndash;			<plugin>&ndash;&gt;-->
<!--&lt;!&ndash;				<groupId>org.springframework.boot</groupId>&ndash;&gt;-->
<!--&lt;!&ndash;				<artifactId>spring-boot-maven-plugin</artifactId>&ndash;&gt;-->
<!--&lt;!&ndash;				<configuration>&ndash;&gt;-->
<!--&lt;!&ndash;					&lt;!&ndash; 热部署配置 &ndash;&gt;&ndash;&gt;-->
<!--&lt;!&ndash;					<fork>true</fork>&ndash;&gt;-->
<!--&lt;!&ndash;				</configuration>&ndash;&gt;-->
<!--&lt;!&ndash;			</plugin>&ndash;&gt;-->
<!--			-->
<!--		</plugins>-->
<!--		-->
<!--	</build>-->
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.antlr</groupId>
					<artifactId>antlr4-maven-plugin</artifactId>
					<version>${antlr4.version}</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>3.0.0</version>
				</plugin>
				<plugin>
					<groupId>net.alchim31.maven</groupId>
					<artifactId>scala-maven-plugin</artifactId>
					<!-- The scala-maven-plugin is used for compiling/testing/running/documenting scala code in maven -->
					<version>3.2.2</version>
					<configuration>
						<scalaVersion>${scala.version}</scalaVersion>
						<scalaCompatVersion>${scala.library}</scalaCompatVersion>
						<recompileMode>incremental</recompileMode>
						<useZincServer>false</useZincServer>
						<args>
							<arg>-unchecked</arg>
							<arg>-deprecation:false</arg>
							<arg>-feature</arg>
						</args>
						<jvmArgs>
							<!--<jvmArg>-Xss2m</jvmArg>-->
							<jvmArg>-Xms512M</jvmArg>
							<jvmArg>-Xmx2048M</jvmArg>
							<jvmArg>-XX:MaxPermSize=2048M</jvmArg>
							<jvmArg>-XX:+CMSClassUnloadingEnabled</jvmArg>
						</jvmArgs>
						<javacArgs>
							<javacArg>-source</javacArg>
							<javacArg>${java.version}</javacArg>
							<javacArg>-target</javacArg>
							<javacArg>${java.version}</javacArg>
							<javacArg>-Xlint:all,-serial,-path</javacArg>
						</javacArgs>
					</configuration>
					<executions>
						<execution>
							<id>scala-compile-first</id>
							<phase>process-resources</phase>
							<goals>
								<goal>add-source</goal>
								<goal>compile</goal>
							</goals>
						</execution>
						<execution>
							<id>scala-test-compile</id>
							<phase>process-test-resources</phase>
							<goals>
								<goal>testCompile</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<!-- The Compiler Plugin is used to compile the sources of your project -->
					<version>3.5.1</version>
					<configuration>
						<source>${java.version}</source>
						<target>${java.version}</target>
						<compilerVersion>${java.version}</compilerVersion>
						<encoding>${project.build.sourceEncoding}</encoding>
						<optimize>true</optimize>
						<maxmem>1024m</maxmem>
						<fork>true</fork>
						<compilerArgs>
							<arg>-Xlint:all,-serial,-path</arg>
						</compilerArgs>
					</configuration>
					<executions>
						<execution>
							<phase>compile</phase>
							<goals>
								<goal>compile</goal>
							</goals>
						</execution>
					</executions>
				</plugin>

				<!-- ========================================================== -->
				<!-- test and report -->
				<!-- ========================================================== -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<!-- The Surefire Plugin is used during the test phase of the build lifecycle to execute the unit tests of an application -->
					<version>2.19.1</version>
					<configuration>
						<skipTests>true</skipTests>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.scalatest</groupId>
					<artifactId>scalatest-maven-plugin</artifactId>
					<!-- The ScalaTest Maven plugin allows you to run ScalaTest tests through Maven -->
					<!-- To use the ScalaTest Maven plugin, you need to disable SureFire and enable ScalaTest -->
					<version>1.0</version>
					<configuration>
						<reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
						<junitxml>.</junitxml>
						<filereports>report.txt</filereports>
						<argLine>-Xms512M -Xmx2048M -XX:MaxPermSize=2048M -XX:+CMSClassUnloadingEnabled</argLine>
					</configuration>
					<executions>
						<execution>
							<id>unit-test</id>
							<phase>test</phase>
							<goals>
								<goal>test</goal>
							</goals>
							<configuration>
								<suffixes>^((?!IntegrationTestSuite).)*$</suffixes>
								<wildcardSuites></wildcardSuites>
							</configuration>
						</execution>
						<execution>
							<id>integration-test</id>
							<phase>integration-test</phase>
							<goals>
								<goal>test</goal>
							</goals>
							<configuration>
								<suffixes>(IntegrationTestSuite)</suffixes>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<!-- ================================================== -->
				<!-- Notice -->
				<!-- ================================================== -->
				<plugin>
					<groupId>org.jasig.maven</groupId>
					<artifactId>maven-notice-plugin</artifactId>
					<version>1.1.0</version>
					<configuration>
						<generateChildNotices>false</generateChildNotices>
						<noticeTemplate>https://source.jasig.org/licenses/NOTICE.template</noticeTemplate>
						<licenseMapping>
							<param>file://${main.basedir}/dev/license-mappings.xml</param>
							<param>https://source.jasig.org/licenses/license-mappings.xml</param>
						</licenseMapping>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>net.alchim31.maven</groupId>
				<artifactId>scala-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.scalatest</groupId>
				<artifactId>scalatest-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>license-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.jasig.maven</groupId>
				<artifactId>maven-notice-plugin</artifactId>
			</plugin>
		</plugins>
	</build>
</project>


